--- a/rapport.tex
+++ b/rapport.tex
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{bm}
 \usepackage{caption}
 \usepackage{comment}
 \usepackage{listings}
@@ -18,6 +19,8 @@
 
 \newcommand{\pp}{\varphi}
 \newcommand{\ppt}{\tilde{\varphi}}
+\newcommand{\ppeps}{\varphi_{\epsilon}}
+\newcommand{\ppteps}{\tilde{\varphi}_{\epsilon}}
 \newcommand{\PP}{\mathbb{P}}
 \newcommand{\epst}{\tilde{\epsilon}}
 \newcommand{\st}{\Sigma_t}
@@ -578,9 +581,70 @@ On peut faire les mêmes analyses que dans le cas de la source ponctuelle.
 On reprend le cas du matériau non homogène de la partie \ref{sec:nonhomog.MC}. 
 
 \subsection{Matériau diffusant}
-On se place maintenant dans le cas d'un matériau diffusant. Nous ne pouvons plus maintenant nous placer à $\mu$ fixé et regarder $\pp(x,\mu)$ mais seulement la valeur moyennée en angle $\ppt(x)$. Il faut donc discrétiser l'espace $[-1;1]$ des angles possibles et sommer les contributions.
+On se place maintenant dans le cas d'un matériau diffusant. Nous ne pouvons plus maintenant nous placer à $\mu$ fixé et regarder $\pp(x,\mu)$ mais seulement la valeur moyennée en angle $\ppt(x)$. Il faut donc discrétiser l'espace $[-1;1]$ des angles possibles et sommer les contributions de chaque arc de cercle. 
 
+\subsection{Limite de diffusion}
+Nous avons considéré deux cas : $\Ssss=0$ et $\sa=0$. On se place maintenant dans un cas intermédiaire où aucun des deux coefficients n'est nul et on regarde la limite de diffusion poour $\epsilon$ tendant vers $0$. 
+$$\sa(x) = \epsilon \sigma_a,\hspace{1cm} \st(x) = \sigma_t/\epsilon, \hspace{1cm} \Ssss=\st -\sa, \hspace{1cm} S(x) = \epsilon$$
 
+On s'intéresse à $\ppt_{\epsilon}(x) = \frac{1}{2} \int_{-1}^1 \pp_{\epsilon}(x \mu) \ d\mu$ le flux moyenné en angle pour un certain $\epsilon$. On cherche l'équation vérifiée par cette grandeur. Pour ce faire on postule la décomposition de $\ppeps = \sum_{n=0}^{n=+\infty} \ppeps^n \epsilon^n$. On injecte cette forme dans l'équation du transport neutronique et on regarde chaque équation pour chaque puissance de $\epsilon^n$. On obtient pour les 4 premières puissances de $\epsilon$ : 
+
+\begin{align*}
+    \tag{$\epsilon^{-1}$}
+    \ppeps^0 &= \ppteps^0 \\
+    \tag{$\epsilon^{0}$} 
+    \mu \frac{\partial \ppeps^0}{\partial x} + \sigma_t \ppeps^1 &= \sigma_t \ppteps^1 \\
+    \tag{$\epsilon^{1}$}
+    \mu \frac{\partial \ppeps^1}{\partial x} + \sigma_t \ppeps^2 &= \sigma_t \ppteps^2 - \sigma_a \ppteps^0 + 1 \\
+    \tag{$\epsilon^{2}$}
+    \mu \frac{\partial \ppeps^2}{\partial x} + \sigma_t \ppeps^3 &= \sigma_t \ppteps^3 - \sigma_a \ppteps^1 \\
+\end{align*}
+Au delà les équations en puissances plus élevées de $\epsilon$ reprennent l'équation ($\epsilon^2$) avec un decallage des indices. 
+
+On utilise ($\epsilon^{-1}$) dans $\mu \times$ ($\epsilon^{0}$) qu'on moyenne en $\mu$
+
+\begin{equation*}
+    \frac{1}{2} \int_{-1}^1 \mu \ppeps^1(x,\mu)d\mu = \frac{-1}{3 \sigma_t} \frac{d\ppeps^0}{d x}
+\end{equation*} 
+
+On moyenne ($\epsilon^{1}$) en $\mu$ et on utilise le résultat précédent, et on moyenne aussi ($\epsilon^{2}$)
+\begin{align*}
+    \frac{-1}{3 \sigma_t}  \frac{d^2 \ppteps^0}{d x^2} + \sa \ppteps^0 &= 1 \\
+    \frac{1}{2} \int_{-1}^1 \mu \frac{\partial \ppeps^2}{\partial x} d\mu + \sa \ppteps^1 &= 0
+\end{align*}
+
+Cette dernière équation fait apparaitre une intégrale avec $\ppeps^2$ que l'on fait aussi apparaître dans $\frac{\mu}{\sigma_t} \frac{\partial (\epsilon^{1})}{\partial x}$. En joignant les deux on obtient
+\begin{equation*}
+    \frac{-1}{2}\int_{-1}^1 \frac{\mu}{\sigma_t} \frac{\partial^2 \ppeps^1}{\partial x^2} d\mu + \sa \ppteps^1 = 0
+\end{equation*}
+ On utilise l'expression de $\ppeps^1$ dans ($\epsilon^0$) pour faire disparaitre l'intégrale. En utilisant aussi l'équation en $\ppteps^0$ on obtient l'équation de diffusion neutronique à un $O(\epsilon^2)$ près avec une source unitaire
+
+ \begin{equation}
+     \frac{-1}{3\sigma_t} \frac{d^2 \ppteps}{d x^2} + \sa \ppteps = 1
+ \end{equation}
+
+ \vspace{0.2cm}
+ On peut maintenant regarder la solution de ce problème pour $\sigma_a=0$ et $\sigma_t=1$ qui est le cas sans absorption étudié auparavent. On trouve 
+ \begin{equation}
+     \frac{-1}{3} \ppt_0(x)'' = 1
+ \end{equation}
+soit $\ppt_0(x)$ un polynome d'ordre 2 en $x$ de la forme $\ppt_0(x) = -3x^2+bx+c$. Pour déterminer les coefficients on utilise la symétrie de la solution par rapport à la droite $x=\frac{1}{2}$ qui donne $b=3$. L'ordonnée à l'origine est donnée par les conditions aux limites de flux entrant nul.
+
+On regarde la solution obtenue pour plusieurs $\epsilon$ ainsi que le nombre d'itérations nécéssaires pour converger à $\nu=10^{-7}$ près avec $N_x=1000$ points en $x$ et $N_\mu=100$ arcs de cercles. Nous avons choisit ce paramètre de manière à avoir une solution le plus précise possible dans des temps de calcul raisonnables. Voici les résultats dans le tableau ci-dessous
+
+\vspace{0.1cm}
+\begin{tabular}{cccc}
+    $\bm{\epsilon}$ &1 &0.1&0.01\\
+    \textbf{Nombre d'itérations} & 1 itération : cas sans scattering & 368& 19875
+\end{tabular}
+\vspace{0.2cm}
+
+Le nombre d'itérations nécessaires pour arriver à la précision souhaitée augmente très rapidement avec $\epsilon$ qui diminue. On voit donc bien l'intérêt de mettre en place une méthode d'accélération comme par exemple l'accélération par diffusion synthétique. 
+
+Avant de passer à l'accélération regardons l'impact des paramètres $N_x$ et $N_\mu$ sur l'erreur.
+
+\subsection{Accélération par diffusion synthétique}
+Pour accélérer le code dans la limite de diffusion on utilise la méthode d'accélération par diffusion synthétique. 
 
 
 
